mv util/types.h osdep/types.h

--- a/src/osdep/Makefile.am
+++ b/src/osdep/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.31 2005/05/14 12:24:07 pasky Exp $
+## $Id: Makefile.am,v 1.32 2005/06/12 00:30:12 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -53,5 +53,6 @@ libosdep_a_SOURCES = \
  stat.h \
  stub.c \
  stub.h \
- system.h
+ system.h \
+ types.h
 
