--- a/src/modules/Makefile.am
+++ b/src/modules/Makefile.am
@@ -1,10 +1,12 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2003/10/27 02:17:52 jonas Exp $
+## $Id: Makefile.am,v 1.3 2005/06/12 00:59:33 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
 noinst_LIBRARIES = libmodules.a
 libmodules_a_SOURCES = \
+ event.c \
+ event.h \
  module.c \
  module.h \
  version.c \
