--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -1,10 +1,12 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.1 2005/06/12 01:27:56 jonas Exp $
+## $Id: Makefile.am,v 1.2 2005/06/12 01:34:50 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
 noinst_LIBRARIES = libnetwork.a
 libnetwork_a_SOURCES = \
  dns.c \
- dns.h
+ dns.h \
+ socket.c \
+ socket.h
 
