--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -1,10 +1,12 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2005/06/12 01:34:50 jonas Exp $
+## $Id: Makefile.am,v 1.3 2005/06/12 01:47:54 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
 noinst_LIBRARIES = libnetwork.a
 libnetwork_a_SOURCES = \
+ connection.c \
+ connection.h \
  dns.c \
  dns.h \
  socket.c \
