--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -1,7 +1,16 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.5 2005/06/12 02:02:44 jonas Exp $
+## $Id: Makefile.am,v 1.6 2005/06/12 02:26:49 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
+
+if CONFIG_SSL
+ssldir = ssl
+sslobj = $(ssldir)/ssl.o $(ssldir)/socket.o
+endif
+
+SUBDIRS = $(ssldir)
+
+libnetwork_a_LIBADD = $(sslobj)
 
 noinst_LIBRARIES = libnetwork.a
 libnetwork_a_SOURCES = \
