--- a/src/config/Makefile.am
+++ b/src/config/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.16 2005/06/12 00:42:30 jonas Exp $
+## $Id: Makefile.am,v 1.17 2005/06/12 18:31:42 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -23,5 +23,7 @@ libconfig_a_SOURCES = \
  options.inc \
  opttypes.c \
  opttypes.h \
+ timer.c \
+ timer.h \
  urlhist.c \
  urlhist.h
