--- a/configure.in
+++ b/configure.in
@@ -150,11 +150,16 @@ AC_CHECK_HEADERS(sys/select.h)
 AC_CHECK_HEADERS(sys/signal.h)
 AC_CHECK_HEADERS(sys/socket.h)
 AC_CHECK_HEADERS(sys/time.h)
-AC_CHECK_HEADERS(sys/un.h)
 AC_CHECK_HEADERS(sys/utsname.h)
 AC_CHECK_HEADERS(stdint.h inttypes.h)
 AC_CHECK_HEADERS(locale.h pwd.h)
 AC_CHECK_HEADERS(termios.h)
+
+AC_CHECK_HEADERS(sys/un.h,
+	[CONFIG_INTERLINK=yes
+	 EL_CONFIG([CONFIG_INTERLINK], [interlinking])],
+	[CONFIG_INTERLINK=no])
+AM_CONDITIONAL(CONFIG_INTERLINK, test "$CONFIG_INTERLINK" = yes)
 
 dnl ===================================================================
 dnl Checks for typedefs, structures, and compiler characteristics.
