--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.8 2005/06/12 22:16:04 jonas Exp $
+## $Id: Makefile.am,v 1.9 2005/06/12 22:22:45 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -8,9 +8,19 @@ ssldir = ssl
 sslobj = $(ssldir)/ssl.o $(ssldir)/socket.o
 endif
 
+if CONFIG_INTERLINK
+interlinkobj = interlink.o
+endif
+
 SUBDIRS = $(ssldir)
 
-libnetwork_a_LIBADD = $(sslobj)
+EXTRA_libnetwork_a_SOURCES = \
+ interlink.c \
+ interlink.h
+
+libnetwork_a_LIBADD = \
+ $(interlinkobj) \
+ $(sslobj)
 
 noinst_LIBRARIES = libnetwork.a
 libnetwork_a_SOURCES = \
