mv network/interlink.* main/interlink.*, requested by pasky and actually fixes a build bug.

--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,7 +1,18 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.25 2005/06/13 00:43:28 jonas Exp $
+## $Id: Makefile.am,v 1.26 2005/06/13 00:52:14 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
+
+if CONFIG_INTERLINK
+interlinkobj = interlink.o
+endif
+
+EXTRA_libmain_a_SOURCES = \
+ interlink.c \
+ interlink.h
+
+libmain_a_LIBADD = \
+ $(interlinkobj)
 
 noinst_LIBRARIES = libmain.a
 libmain_a_SOURCES = \
