mv sched/ session/

--- a/configure.in
+++ b/configure.in
@@ -1267,13 +1267,13 @@ AC_OUTPUT([ \
  src/protocol/nntp/Makefile \
  src/protocol/rewrite/Makefile \
  src/protocol/smb/Makefile \
- src/sched/Makefile \
  src/scripting/Makefile \
  src/scripting/guile/Makefile \
  src/scripting/lua/Makefile \
  src/scripting/perl/Makefile \
  src/scripting/python/Makefile \
  src/scripting/ruby/Makefile \
+ src/session/Makefile \
  src/terminal/Makefile \
  src/util/Makefile \
  src/viewer/Makefile \
