Add 88-color support available via --enable-88-colors. It basically just adds 88-color data structs and changes the CONFIG_256_COLOR #ifdefs to also depend on CONFIG_88_COLORS. Tested lightly in rxvt-unicode. The feature description is pasted from the 256 color one, maybe they should be merged somehow.

--- a/configure.in
+++ b/configure.in
@@ -1038,6 +1038,10 @@ EL_ARG_ENABLE(CONFIG_MOUSE, mouse, [Mouse handling],
 	      [  --disable-mouse         disable mouse support])
 AM_CONDITIONAL(CONFIG_MOUSE, test "$CONFIG_MOUSE" = yes)
 
+EL_ARG_ENABLE(CONFIG_88_COLORS, 88-colors, [88 colors],
+	      [  --enable-88-colors     enable 88 color support])
+AM_CONDITIONAL(CONFIG_256_COLORS, test "$CONFIG_256_COLORS" = yes)
+
 EL_ARG_ENABLE(CONFIG_256_COLORS, 256-colors, [256 colors],
 	      [  --enable-256-colors     enable 256 color support])
 AM_CONDITIONAL(CONFIG_256_COLORS, test "$CONFIG_256_COLORS" = yes)
