--- a/features.conf
+++ b/features.conf
@@ -387,6 +387,32 @@ CONFIG_HTML_HIGHLIGHT=no
 CONFIG_MOUSE=yes
 
 
+### 88 Colors in Terminals
+#
+# Define to add support for using 88 colors in terminals. Note that this
+# requires a capable terminal emulator, such as:
+#
+# - Thomas Dickey's XTerm, version 111 or later (check which version you have
+#   with xterm -version) compiled with --enable-88-color.
+#
+# - Rxvt, version 2.7.9 or later compiled with --enable-88-color.
+#
+# You will still need to enable this at runtime for a given terminal in terminal
+# options, or set your $TERM variable to xterm-88color - then, ELinks will
+# automatically configure itself to make use of all the available terminal
+# features, while still acting sensibly when you happen to run it in an xterm
+# w/o the 88 colors support.
+#
+# When enabled, the memory usage is somewhat increased even when running in mono
+# and 16 colors mode (the memory consumption can be especially remarkable when
+# rendering very large documents and/or using very large terminals).  However,
+# when you actually run it in the suitable terminal, it looks really impressive,
+# I'd say marvelous!
+#
+# Default: disabled
+
+CONFIG_88_COLORS=no
+
 ### 256 Colors in Terminals
 #
 # Define to add support for using 256 colors in terminals. Note that this
@@ -553,5 +579,5 @@ CONFIG_BACKTRACE=yes
 CONFIG_NO_ROOT_EXEC=no
 
 
-# $Id: features.conf,v 1.32 2005/05/18 17:48:53 jonas Exp $
+# $Id: features.conf,v 1.33 2005/06/15 18:45:00 jonas Exp $
 # vim: filetype=sh textwidth=80
