Better check for C99 vsnprintf compliance. Buggy Cygwin vsnprintf should be caught.

--- a/configure.in
+++ b/configure.in
@@ -262,28 +262,39 @@ fi
 
 AC_CACHE_CHECK([for C99 vsnprintf],el_cv_HAVE_C99_VSNPRINTF,[
 AC_TRY_RUN([
-#include <sys/types.h>
+#include <stdio.h>
 #include <stdarg.h>
+#include <stdlib.h>
+#include <string.h>
+
+/* This test should catch buggy Cygwin vsnprintf. */
+
+char buf[8];
+
+int bar(char *buf, const char *format, va_list ap)
+{
+       return vsnprintf(buf, 0, format, ap);
+}
+
 void foo(const char *format, ...) {
        va_list ap;
        int len;
-       char buf[5];
 
        va_start(ap, format);
-       len = vsnprintf(buf, 0, format, ap);
+       len = bar(buf, format, ap);
        va_end(ap);
-       if (len != 5) exit(1);
+       if ((len != 6) && (len != 7)) exit(1); /* \n -> \r\n */
 
        va_start(ap, format);
-       len = vsnprintf(0, 0, format, ap);
+       len = bar(buf, format, ap);
        va_end(ap);
-       if (len != 5) exit(1);
+       if ((len != 6) && (len != 7)) exit(1);
 
        if (snprintf(buf, 3, "hello") != 5 || strcmp(buf, "he") != 0) exit(1);
 
        exit(0);
 }
-main() { foo("hello"); }
+main() { foo("hello\n"); }
 ],
 el_cv_HAVE_C99_VSNPRINTF=yes,el_cv_HAVE_C99_VSNPRINTF=no,el_cv_HAVE_C99_VSNPRINTF=cross)])
 if test x"$el_cv_HAVE_C99_VSNPRINTF" = x"yes"; then
