Make the documentation configuration also inform about what documentation and formats are available. Idea by Miciah.
Documentation ................... AsciiDoc, XmlTo, JadeWrapper, Pod2HTML
Manual Formats .................. HTML (one file), HTML (multiple files), PDF
Man Page Formats ................ HTML, man (groff)

--- a/configure.in
+++ b/configure.in
@@ -38,16 +38,21 @@ if test "x$CONFIG_DOC" != xno; then
 	AC_PATH_PROGS(ASCIIDOC, "asciidoc")
       	if test "x$ASCIIDOC" != "x"; then
 		EL_CONFIG(CONFIG_ASCIIDOC, [AsciiDoc])
+		EL_CONFIG(MANUAL_ASCIIDOC, [HTML (one file)])
+		EL_CONFIG(MAN_ASCIIDOC, [HTML])
 	fi
 
 	AC_PATH_PROGS(XMLTO, "xmlto")
       	if test "x$XMLTO" != "x"; then
 		EL_CONFIG(CONFIG_XMLTO, [XmlTo])
+		EL_CONFIG(MANUAL_XMLTO, [HTML (multiple files)])
+		EL_CONFIG(MAN_XMLTO, [man (groff)])
 	fi
 
 	AC_PATH_PROGS(JW, "jw")
       	if test "x$JW" != "x"; then
 		EL_CONFIG(CONFIG_JW, [JadeWrapper])
+		EL_CONFIG(MANUAL_JW, [PDF])
 	fi
 
 	AC_PATH_PROGS(POD2HTML, "pod2html")
@@ -62,6 +67,8 @@ AC_SUBST(CONFIG_XMLTO)
 AC_SUBST(CONFIG_JW)
 
 EL_CONFIG_DEPENDS(CONFIG_DOC, [CONFIG_ASCIIDOC CONFIG_XMLTO CONFIG_JW CONFIG_POD2HTML], [Documentation])
+EL_CONFIG_DEPENDS(CONFIG_MANUAL, [MANUAL_ASCIIDOC MANUAL_XMLTO MANUAL_JW], [Manual Formats])
+EL_CONFIG_DEPENDS(CONFIG_MANUAL, [MAN_ASCIIDOC MAN_XMLTO], [Man Page Formats])
 
 AM_CONDITIONAL(CONFIG_ASCIIDOC, test "$CONFIG_ASCIIDOC" = yes)
 AM_CONDITIONAL(CONFIG_POD2HTML, test "$CONFIG_POD2HTML" = yes)
