Only show format info if there are any.

--- a/configure.in
+++ b/configure.in
@@ -67,8 +67,17 @@ AC_SUBST(CONFIG_XMLTO)
 AC_SUBST(CONFIG_JW)
 
 EL_CONFIG_DEPENDS(CONFIG_DOC, [CONFIG_ASCIIDOC CONFIG_XMLTO CONFIG_JW CONFIG_POD2HTML], [Documentation])
-EL_CONFIG_DEPENDS(CONFIG_MANUAL, [MANUAL_ASCIIDOC MANUAL_XMLTO MANUAL_JW], [Manual Formats])
-EL_CONFIG_DEPENDS(CONFIG_MANUAL, [MAN_ASCIIDOC MAN_XMLTO], [Man Page Formats])
+
+if test "$CONFIG_ASCIIDOC" = yes &&
+   test "$CONFIG_XMLTO" = yes &&
+   test "$CONFIG_JW" = yes; then
+	EL_CONFIG_DEPENDS(CONFIG_MANUAL, [MANUAL_ASCIIDOC MANUAL_XMLTO MANUAL_JW], [Manual Formats])
+fi
+
+if test "$CONFIG_ASCIIDOC" = yes &&
+   test "$CONFIG_XMLTO" = yes; then
+	EL_CONFIG_DEPENDS(CONFIG_MANUAL, [MAN_ASCIIDOC MAN_XMLTO], [Man Page Formats])
+fi
 
 AM_CONDITIONAL(CONFIG_ASCIIDOC, test "$CONFIG_ASCIIDOC" = yes)
 AM_CONDITIONAL(CONFIG_POD2HTML, test "$CONFIG_POD2HTML" = yes)
