--- a/features.conf
+++ b/features.conf
@@ -213,6 +213,29 @@ CONFIG_IPV6=yes
 CONFIG_URI_REWRITE=yes
 
 
+### BitTorrent Protocol Support
+#
+# The BitTorrent protocol is a protocol for distributing files in a peer-to-peer
+# (P2P) manner. It uses the HTTP protocol for communicating with a central
+# server and a peer-to-peer (P2P) protocol for exchanging file pieces betweens
+# peer downloaders. The integrity of file pieces downloaded from peers are
+# checked using cryptographic hashing (SHA1).
+#
+# Downloads using BitTorrent are started by first downloading a .torrent file
+# with the MIME type "application/x-bittorrent". The file contains information
+# which enables ELinks to ask a central server, called a tracker, for
+# information about other downloading peers and start downloading from and
+# uploading to them.
+#
+# At any time, an external handler can always be defined to take precedence of
+# the internal BitTorrent client and the internal client can always be forced
+# by prefixing the URI of the .torrent file with "bittorrent:"
+# 
+# Default: disabled
+
+CONFIG_BITTORRENT=no
+
+
 ### Local CGI Support
 #
 # ELinks can (like w3m or lynx) execute certain executable files stored on the
@@ -579,5 +602,5 @@ CONFIG_BACKTRACE=yes
 CONFIG_NO_ROOT_EXEC=no
 
 
-# $Id: features.conf,v 1.33 2005/06/15 18:45:00 jonas Exp $
+# $Id: features.conf,v 1.34 2005/07/11 10:59:04 jonas Exp $
 # vim: filetype=sh textwidth=80
